--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/vim,python,visualstudiocode,macos,windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=vim,python,visualstudiocode,macos,windows
 
+data
+
 ### macOS ###
 # General
 .DS_Store
